# coda

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: engine.rs  log_tail.rs  main.rs  spotify.rs  watcher.rs
