[package]
name = "coda"
version = "0.1.0"
edition = "2024"
description = "Restart Spotify when ads play — macOS daemon"
license = "MIT"
repository = "https://github.com/LarryLuTW/coda"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
nix = { version = "0.31.2", features = ["signal", "process"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
